--- a/View/Shared/DataHandler/DataInit.razor
+++ b/View/Shared/DataHandler/DataInit.razor
@@ -3,6 +3,10 @@
 @if (Data is not null) {
     @ChildContent(Data)
 }
+else
+{
+    <MudProgressCircular Color="Color.Primary" Indeterminate="true"/>
+}
 
 @code {
     
