--- a/View/_Imports.razor
+++ b/View/_Imports.razor
@@ -56,3 +56,4 @@
 @inject EventProvider EventProvider
 @inject DateManager DateManager
 @inject NavigationProvider NavigationProvider
+@inject EmailService EmailService
