--- a/View/Pages/_Layout.cshtml
+++ b/View/Pages/_Layout.cshtml
@@ -11,6 +11,7 @@
     @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>*@
     <link href="css/site.css" rel="stylesheet"/>
     <link href="css/custom.css" rel="stylesheet"/>
+    <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
 
