--- a/View/wwwroot/html/email-templates/user-registration-complete.html
+++ b/View/wwwroot/html/email-templates/user-registration-complete.html
@@ -1,33 +1,4 @@
-﻿<!-- HEADER -->
-<table border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;">
-    <tr>
-        <td bgcolor="#ffffff">
-            <div align="center" style="padding: 0px 15px 0px 15px;">
-                <table border="0" cellpadding="0" cellspacing="0" width="500" class="wrapper">
-                    <!-- LOGO/PREHEADER TEXT -->
-                    <tr>
-                        <td style="padding: 20px 0px 30px 0px;" class="logo">
-                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                <tr>
-                                    <td bgcolor="#ffffff" width="100" align="left"><a href="#email-application-url#" target="_blank"><img alt="Logo" src="#email-application-logo#" width="52" height="78" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;" border="0"></a></td>
-                                    <td bgcolor="#ffffff" width="400" align="right" class="mobile-hide">
-                                        <table border="0" cellpadding="0" cellspacing="0">
-                                            <tr>
-                                                <td align="right" style="padding: 0 0 5px 0; font-size: 14px; font-family: Arial, sans-serif; color: #666666; text-decoration: none;"><span style="color: #666666; text-decoration: none;">#email-preheader-text#</span></td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </td>
-    </tr>
-</table>
-
-<!-- ONE COLUMN SECTION -->
+﻿<!-- ONE COLUMN SECTION -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;">
     <tr>
         <td bgcolor="#ffffff" align="center" style="padding: 70px 15px 70px 15px;" class="section-padding">
@@ -45,7 +16,7 @@
                                                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                     <tr>
                                                         <td>
-                                                            <a href="" target="_blank"><img src="https://img.freepik.com/free-vector/online-certification-illustration_23-2148568875.jpg?w=2000&t=st=1690019618~exp=1690020218~hmac=e802550b24323f28cd5dd16770906e9d571c2ecce362b91c5291275e6185c8d8" width="500" height="200" border="0" alt="Can an email really be responsive?" style="display: block; padding: 0; color: #666666; text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px; width: 500px; height: 200px;" class="img-max"></a>
+                                                            <a href="" target="_blank"><img src="https://img.freepik.com/free-vector/online-certification-illustration_23-2148568875.jpg?w=2000&t=st=1690019618~exp=1690020218~hmac=e802550b24323f28cd5dd16770906e9d571c2ecce362b91c5291275e6185c8d8" width="500" height="200" border="0" style="display: block; padding: 0; color: #666666; text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px; width: 500px; height: 200px; object-fit: cover;" class="img-max"></a>
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -60,10 +31,14 @@
                                     <!-- COPY -->
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding-copy">Hello #email-username#!</td>
+                                            <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333; padding-top: 30px;" class="padding-copy">
+                                                Hello #email-username#!
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy">An administrator has recently accepted your registration. This means you can now sign in to #email-application-name#...</td>
+                                            <td align="center" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy">
+                                                An administrator has recently accepted your registration. This means you can now sign in to #email-application-name#...
+                                            </td>
                                         </tr>
                                     </table>
                                 </td>
@@ -76,39 +51,14 @@
                                             <td align="center" style="padding: 25px 0 0 0;" class="padding-copy">
                                                 <table border="0" cellspacing="0" cellpadding="0" class="responsive-table">
                                                     <tr>
-                                                        <td align="center"><a href="#email-application-log-in-page#" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; background-color: #5D9CEC; border-top: 15px solid #5D9CEC; border-bottom: 15px solid #5D9CEC; border-left: 25px solid #5D9CEC; border-right: 25px solid #5D9CEC; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; display: inline-block;" class="mobile-button">Log In &rarr;</a></td>
+                                                        <td align="center"><a href="#email-application-log-in-link#" target="_blank" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; color: #ffffff; text-decoration: none; background-color: #5D9CEC; border-top: 15px solid #5D9CEC; border-bottom: 15px solid #5D9CEC; border-left: 25px solid #5D9CEC; border-right: 25px solid #5D9CEC; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; display: inline-block;" class="mobile-button">
+                                                            Log In &rarr;
+                                                        </a></td>
                                                     </tr>
                                                 </table>
                                             </td>
                                         </tr>
                                     </table>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-
-<!-- FOOTER -->
-<table border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;">
-    <tr>
-        <td bgcolor="#ffffff" align="center">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
-                <tr>
-                    <td style="padding: 20px 0px 20px 0px;">
-                        <!-- UNSUBSCRIBE COPY -->
-                        <table width="500" border="0" cellspacing="0" cellpadding="0" align="center" class="responsive-table">
-                            <tr>
-                                <td align="center" valign="middle" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
-                                    <span class="appleFooter" style="color:#666666;">#email-company-address#</span>
-                                    <br>
-                                    <!-- TODO Unsubscribe button and view in browser -->
-                                    <a class="original-only" style="color: #666666; text-decoration: none;">Unsubscribe</a>
-                                    <span class="original-only" style="font-family: Arial, sans-serif; font-size: 12px; color: #444444;">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span>
-                                    <a style="color: #666666; text-decoration: none;">View this email in your browser</a>
                                 </td>
                             </tr>
                         </table>
